Added ARIMA to the model

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,25 @@ Cryptocurrency Prediction Dashboard
                 <div class="mdc-layout-grid__inner">
                   <div class="mdc-layout-grid__cell--span-6">
                     <h2 class="crypto-widget__heading mdc-typography--overline mdc-theme--primary">
+                      <span class="crypto-widget__heading-text">Prediction From Colab</span>
+                      <span class="crypto-widget__heading-border"></span>
+                    </h2>
+                  </div>
+                  <div
+                    class="mdc-layout-grid__cell--span-6 crypto-hide-tablet crypto-hide-phone crypto-widget__actions">
+                    <a href="#" class="mdc-button mdc-button--raised">ARIMA</a>
+                  </div>
+                </div>
+                <div class="crypto-widget__content">
+                  <iframe src="/graph2" seamless width="100%" height="500"></iframe>
+                </div>
+
+              </div>
+
+              <div class="crypto-widget">
+                <div class="mdc-layout-grid__inner">
+                  <div class="mdc-layout-grid__cell--span-6">
+                    <h2 class="crypto-widget__heading mdc-typography--overline mdc-theme--primary">
                       <span class="crypto-widget__heading-text">Bitcoin Forecast</span>
                       <span class="crypto-widget__heading-border"></span>
                     </h2>
